vertical tabs + css

--- a/culturefeed_entry_ui/css/culturefeed_entry_ui.css
+++ b/culturefeed_entry_ui/css/culturefeed_entry_ui.css
@@ -29,3 +29,40 @@ input.form-checkbox {
   clear: left;
   width: 100%;
 }
+
+input.add-more-link {
+  border:none !important;
+  background: none !important;
+  border-radius: 0 !important;
+  font-weight: normal !important;
+  color: #0071B3 !important;
+  padding: 0px !important;
+  clear: left;
+  display: block;
+}
+
+input.add-more-link:hover {
+  color: #018fe2 !important;
+  text-decoration: underline !important;
+}
+
+/* contacts */
+#contacts-ajax-wrapper .form-type-select {
+  width: 15%;
+  float: left;
+}
+
+#contacts-ajax-wrapper .form-type-textfield input {
+  width: 85%;
+}
+
+#performers-ajax-wrapper .form-type-textfield {
+  float: left;
+  width: 48%;
+  margin-right: 2%;
+}
+
+#spoken-ajax-wrapper .form-type-select {
+  width: 20%;
+  float: left;
+}
