added ajax callback city suggest only with Belgium selected

--- a/culturefeed_entry_ui/css/culturefeed_entry_ui.css
+++ b/culturefeed_entry_ui/css/culturefeed_entry_ui.css
@@ -8,8 +8,16 @@
   clear: left;
 }
 
-.form-item-basic-house-number, .form-item-basic-city {
+.form-item-basic-house-number, .form-item-basic-citywrapper-city {
   margin-left: 30px;
+}
+
+#citywrapper-ajax-wrapper {
+  clear: left;
+}
+
+.form-item-country-select {
+  clear: left;
 }
 
 #datetimes-ajax-wrapper {
