--- a/culturefeed_entry_ui/css/culturefeed_entry_ui.css
+++ b/culturefeed_entry_ui/css/culturefeed_entry_ui.css
@@ -8,7 +8,7 @@
   clear: left;
 }
 
-.form-item-location-house-number, .form-item-location-city {
+.form-item-location-house-number, .form-item-location-citywrapper-city {
   margin-left: 30px;
 }
 
