--- a/culturefeed_entry_ui/css/culturefeed_entry_ui.css
+++ b/culturefeed_entry_ui/css/culturefeed_entry_ui.css
@@ -4,11 +4,11 @@
   float: left;
 }
 
-.form-item-location-street, .form-item-location-zip-code, .form-item-location-country {
+.form-item-location-street, .form-item-zip-code, .form-item-location-country {
   clear: left;
 }
 
-.form-item-location-house-number, .form-item-location-citywrapper-city {
+.form-item-location-house-number {
   margin-left: 30px;
 }
 
