Adding copyright check

--- a/culturefeed_entry_ui/css/culturefeed_entry_ui.css
+++ b/culturefeed_entry_ui/css/culturefeed_entry_ui.css
@@ -125,3 +125,10 @@ input.add-more-link:hover {
 .datetime-child {
   clear: left;
 }
+
+/* https://drupal.org/node/222380 */
+.form-item input[type="checkbox"].error,
+.form-item input[type="radio"].error {
+    outline: 2px solid red;
+    border: none;
+}
