--- a/culturefeed_entry_ui/css/culturefeed_entry_ui.css
+++ b/culturefeed_entry_ui/css/culturefeed_entry_ui.css
@@ -69,7 +69,7 @@
   clear: left;
 }
 
-#datetimes-ajax-wrapper {
+#when-ajax-wrapper {
   clear: left;
 }
 
@@ -151,20 +151,20 @@ input.add-more-link:hover {
 
 /* dates */
 
-#datetimes-ajax-wrapper .container-inline-date, #datetimes-ajax-wrapper .form-item {
+.when-datetimes .container-inline-date, .when-datetimes .form-item {
   float: left;
   clear: none;
 }
 
-#datetimes-ajax-wrapper .container-inline-date .date-padding {
+.when-datetimes .container-inline-date .date-padding {
   padding: 0;
 }
 
-#datetimes-ajax-wrapper .form-type-date-select .form-type-select[class$=hour] {
+.when-datetimes .form-type-date-select .form-type-select[class$=hour] {
     margin-left: .50em;
 }
 
-#datetimes-ajax-wrapper .datetime-child input.add-more-link {
+.when-datetimes .datetime-child input.add-more-link {
   clear: none;
   float: left;
 }
