--- a/culturefeed_entry_ui/css/culturefeed_entry_ui.css
+++ b/culturefeed_entry_ui/css/culturefeed_entry_ui.css
@@ -10,6 +10,10 @@
   min-height: 431px;
 }
 
+#location-ajax-wrapper {
+  clear: left;
+}
+
 .form-item-street, .form-item-location-country {
   clear: left;
 }
