MSS-16 bootstrap fixes

--- a/culturefeed_entry_ui/css/culturefeed_entry_ui.css
+++ b/culturefeed_entry_ui/css/culturefeed_entry_ui.css
@@ -166,7 +166,7 @@ input.add-more-link:hover {
 }
 
 .when-datetimes-table {
-  width: auto;
+  width: auto !important;
 }
 
 .when-datetimes-table td {
