--- a/culturefeed_uitpas/css/culturefeed_uitpas.css
+++ b/culturefeed_uitpas/css/culturefeed_uitpas.css
@@ -1,3 +1,3 @@
-#promotions-filter-sort .form-item {
+#culturefeed-uitpas-promotions-filter-sort .form-item-filter, #culturefeed-uitpas-promotions-filter-sort .form-item-sort {
     float: left;
 }
