UPS-982 optimisation my promotions and my advantages

--- a/culturefeed_uitpas/css/culturefeed_uitpas.css
+++ b/culturefeed_uitpas/css/culturefeed_uitpas.css
@@ -1,3 +1,3 @@
-#culturefeed-uitpas-promotions-filter-sort .form-item-filter, #culturefeed-uitpas-promotions-filter-sort .form-item-sort {
+.form-item-filter, .form-item-sort {
     float: left;
 }
