III-137: Start of form

--- a/culturefeed_udb3_app/templates/udb3-new-event-form.html.twig
+++ b/culturefeed_udb3_app/templates/udb3-new-event-form.html.twig
@@ -1,5 +1,7 @@
 {% extends "modules/culturefeed/culturefeed_udb3_app/templates/udb-page.html.twig" %}
 
 {% block content %}
-    <p>1 23 45 67!</p>
+    <form>
+    <label for="event-name">Event name</label><input type="text" id="event-name" />
+    </form>
 {% endblock %}
