--- a/culturefeed_udb3_app/templates/udb3-new-event-form.html.twig
+++ b/culturefeed_udb3_app/templates/udb3-new-event-form.html.twig
@@ -1,30 +1,32 @@
-{% extends "modules/culturefeed/culturefeed_udb3_app/templates/udb-page.html.twig" %}
+<form class="form-horizontal" style="padding-top:5em;margin-bottom:5em;">
+    <div class="form-group">
+        <label class="col-sm-3 control-label" for="event-name">Name</label>
 
-{% block content %}
-    <form class="form-horizontal">
-        <div class="form-group">
-            <label class="col-sm-3 control-label" for="event-name">Name</label>
-
-            <div class="col-sm-11">
-                <input type="text" id="event-name" class="form-control"/>
-            </div>
+        <div class="col-sm-6">
+            <input type="text" id="event-name" class="form-control"/>
+            <p class="help-block">The name of the event.</p>
         </div>
-        <div class="form-group">
-            <label class="col-sm-3 control-label"
-                   for="event-location">Location</label>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-3 control-label"
+               for="event-location">Location</label>
 
-            <div class="col-sm-11">
-                <input type="text"
-                       class="form-control"
-                       id="event-location"/>
-            </div>
+        <div class="col-sm-6">
+            <input type="text"
+                   class="form-control"
+                   id="event-location"/>
+            <p class="help-block">The cdbid of the location where the event takes place.</p>
         </div>
-        <div class="form-group">
-            <label class="col-sm-3 control-label" for="event-date">Date</label>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-3 control-label" for="event-date">Date</label>
 
-            <div class="col-sm-11">
-                <input type="text" id="event-date" class="form-control"/>
-            </div>
+        <div class="col-sm-6">
+            <datepicker id="event-date" />
         </div>
-    </form>
-{% endblock %}
+    </div>
+
+    <div class="col-sm-6 col-sm-offset-3">
+        <input type="submit" class="button" />
+    </div>
+</form>
