--- a/culturefeed_udb3_app/templates/udb3-new-event-form.html.twig
+++ b/culturefeed_udb3_app/templates/udb3-new-event-form.html.twig
@@ -1,3 +1,4 @@
+{% raw %}
 <div ng-controller="NewEventCtrl">
     <form class="form-horizontal" style="padding-top:5em;margin-bottom:5em;">
         <div class="form-group">
@@ -33,8 +34,14 @@
         </div>
 
         <div class="col-sm-6 col-sm-offset-3">
-            <input type="submit" class="button"
+            <input type="submit" class="button" ng-disabled="busy()"
                    ng-click="newEvent(name, location, date)"/>
+            <div ng-show="newEventUrl">
+                Event created. <a ng-href="{{newEventUrl}}">Show it</a>.
+            </div>
         </div>
     </form>
+
+
 </div>
+{%  endraw %}
