--- a/culturefeed_entry_ui/culturefeed_elements/culturefeed_tags_element/css/culturefeed_tags_element.css
+++ b/culturefeed_entry_ui/culturefeed_elements/culturefeed_tags_element/css/culturefeed_tags_element.css
@@ -1,21 +1,22 @@
-table.edit-tags-form-table {
+table.tags-element-form-table {
   margin-bottom: 10px;
+  width: auto;
 }
 
-.edit-tags-form-table td.edit-tags-form-cell {
+.tags-element-form-table td.tags-element-form-cell {
   vertical-align: middle;
   border-top: none;
 }
 
-.edit-tags-form-table td.edit-tags-form-cell .form-group {
+.tags-element-form-table td.tags-element-form-cell .form-group {
   margin: 0px;
 }
 
-.edit-tags-form-table input.form-checkbox {
+.tags-element-form-table input.form-checkbox {
   max-width: inherit;
   margin-right: 0;
 }
 
-button.edit-tags-add-tag {
+button.tags-element-add-tag {
   margin: 0px 0px 10px 8px;
 }
