--- a/culturefeed_entry_ui/css/culturefeed_entry_ui.collaboration.css
+++ b/culturefeed_entry_ui/css/culturefeed_entry_ui.collaboration.css
@@ -1,12 +1,26 @@
 
-#culturefeed-entry-ui-edit-collaboration-data-form fieldset .panel-body {
+.edit-collaboration-data fieldset .panel-body {
   padding-top: 0px;
 }
 
-#culturefeed-entry-ui-edit-collaboration-data-form fieldset .no-top-margin {
+.edit-collaboration-data fieldset .no-top-margin {
   margin-top: 0px;
 }
 
-#culturefeed-entry-ui-edit-collaboration-data-form legend.panel-heading {
+.edit-collaboration-data fieldset.vertical-tabs-pane > legend.panel-heading {
   display: none;
+}
+
+.edit-collaboration-data .form-item-image-upload > .row > .col-md-6 {
+  width: auto;
+}
+
+.edit-collaboration-data img {
+  max-width: 150px;
+  max-height: 150px;
+}
+
+.edit-collaboration-data .btn-danger {
+  margin-left: 15px;
+  margin-top: 5px;
 }
