MSS-160: Use local TranslationManager instead of global t() function

--- a/culturefeed_ui/templates/culturefeed-ui-connected-account.html.twig
+++ b/culturefeed_ui/templates/culturefeed-ui-connected-account.html.twig
@@ -7,7 +7,7 @@
 {%- endif -%}
 
 {% if account.accountNick %}
-<span class="small quiet">{{ 'Connected to:'|t }} {{ account.accountNick }}</span>
+<span class="small quiet">{{ account.accountNick }}</span>
 {%- endif -%}
 
 {% if publishLink %}
