MSS-184 Form display for uitpas profile details

--- a/culturefeed_uitpas/css/profile_details_form.css
+++ b/culturefeed_uitpas/css/profile_details_form.css
@@ -13,6 +13,10 @@
   padding: 0 10px 0 10px;
 }
 
+.details-form .btn-primary {
+  margin-left: 10px;
+}
+
 .details-form .form-item input {
   width: 100%;
 }
