--- a/culturefeed_uitpas/css/profile_details_form.css
+++ b/culturefeed_uitpas/css/profile_details_form.css
@@ -1,3 +1,5 @@
+/* General. */
+
 .details-form * {
   box-sizing: border-box;
 }
@@ -7,19 +9,34 @@
 }
 
 .details-form .form-item,
-.details-form .form-actions {
+.details-form .form-actions,
+.details-form .form-grouped {
   width: 50%;
   float: left;
   padding: 0 10px 0 10px;
 }
 
+.details-form .form-grouped .form-item {
+  width: 100%;
+  float: none;
+  padding: 0;
+}
+
 .details-form .btn-primary {
-  margin-left: 10px;
+  margin: 20px 0 0 10px;
 }
 
 .details-form .form-item input {
   width: 100%;
 }
+
+.details-form .form-item input.form-checkbox {
+  width: auto;
+  margin-left: 0px;
+  margin-right: 5px;
+}
+
+/* Specific. */
 
 .details-form .form-item-street {
   width: 80%;
@@ -35,4 +52,13 @@
 
 .details-form .form-item-city {
   width: 80%;
+}
+
+.details-form .form-item-mobile,
+.details-form .form-item-email {
+  margin-bottom: 0;
+}
+
+.details-form .form-item-email-description {
+  padding-top: 1.1em;
 }
